# get_funny_cat

./: Cargo.toml  Dockerfile  fly.toml
doc/: realisation.md
src/: main.rs  request_cat_photo.rs
